# rag-assistant-langchain

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
prompts/: rag.txt  rag_rewrite.txt  system.txt
src/ai_assistant/: main.py
src/ai_assistant/api/: health.py
src/ai_assistant/api/v1/: __init__.py  admin.py  chat.py
src/ai_assistant/core/: cache.py  config.py  logger.py
src/ai_assistant/graph/: graph.py  state.py
src/ai_assistant/rag/: __init__.py  embeddings.py  pipeline.py  splitter.py  vector_store.py
src/ai_assistant/schemas/: admin.py  chat.py
src/ai_assistant/utils/: prompts.py
tests/: conftest.py  test_api.py  test_cache.py  test_config.py  test_schemas.py  test_splitter.py
