[project]
name = "ai-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Kla1mzZ",email = "kla1mzz16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=1.0.7,<2.0.0)",
    "langgraph (>=1.0.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "langchain-google-genai (==2.1.11)",
    "langchain-huggingface (>=1.0.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pypdf (>=6.3.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "ai_assistant", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
