[project]
name = "rag-assistant-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.10.0+cpu",
    "sentence-transformers>=5.2.1",
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langgraph>=1.0.7",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.6.2",
    "python-multipart>=0.0.22",
    "ruff>=0.14.14",
    "uvicorn>=0.40.0",
]
