[project]
name = "rag-assistant-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "flashrank>=0.2.10",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.7",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=5.2.0",
    "pypdf>=6.6.2",
    "python-multipart>=0.0.22",
    "ruff>=0.14.14",
    "sentence-transformers>=5.2.1",
    "uvicorn>=0.40.0",
]
